netcfg (1.90) UNRELEASED; urgency=low

  * netcfg.h: drop ip6-localnet (obsolete)
  * netcfg.h: drop ip6-mcastprefix (no need for it to be in /etc/hosts)

 -- Philipp Kern <pkern@debian.org>  Tue, 28 Aug 2012 23:57:14 +0200

netcfg (1.89) unstable; urgency=low

  [ Philipp Kern ]
  * wireless.c: Fix some spelling mistakes.

  [ Updated translations ]
  * Greek (el.po) by galaxico
  * Lithuanian (lt.po) by Rimas Kudelis
  * Serbian (sr.po) by Karolina Kalic

 -- Christian Perrier <bubulle@debian.org>  Sat, 25 Aug 2012 16:42:13 +0200

netcfg (1.88) unstable; urgency=low

  * Team upload

  [ Philipp Kern ]
  * Avoid gateway reachability testing on s390(x) with a layer 3 qeth
    network device.

 -- Philipp Kern <pkern@debian.org>  Mon, 13 Aug 2012 15:50:50 +0200

netcfg (1.87) unstable; urgency=low

  [ Per Andersson and Sorina Sandu ]
  * Coding style cleanups

  [ Sorina Sandu ]
  * Cleanup link detection handling and improve logging

 -- Christian Perrier <bubulle@debian.org>  Fri, 10 Aug 2012 07:48:45 +0200

netcfg (1.86) unstable; urgency=low

  [ Gaudenz Steinlin ]
  * Add logging to iface activation and deactivation.

  [ Christian Perrier ]
  * Rename cryptic killall.sh to kill-all-dhcp.

 -- Christian Perrier <bubulle@debian.org>  Wed, 08 Aug 2012 08:29:48 +0200

netcfg (1.85) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Timo Jyrinki

 -- Christian Perrier <bubulle@debian.org>  Sat, 04 Aug 2012 22:28:09 +0200

netcfg (1.84) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Esperanto (eo.po) by Felipe Castro
  * Spanish (es.po) by Javier Fernández-Sanguino
  * Italian (it.po) by Milo Casagrande
  * Swedish (sv.po) by Martin Bagge / brother

 -- Christian Perrier <bubulle@debian.org>  Thu, 26 Jul 2012 00:42:11 +0200

netcfg (1.83) unstable; urgency=low

  [ Updated translations ]
  * Arabic (ar.po) by Ossama Khayat
  * Belarusian (be.po) by Viktar Siarheichyk
  * Bulgarian (bg.po) by Damyan Ivanov